[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navkit"
version = "0.1.1"
description = "NAV & portfolio performance analytics with trading-day-aware resampling for China A-share markets."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Zhengquan & ChatGPT", email="example@example.com"}]
keywords = ["NAV", "fund", "portfolio", "analytics", "performance", "China", "trading calendar"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
cal = ["pandas-market-calendars>=4.4.0", "exchange-calendars>=4.5.0"]

[project.urls]
Homepage = "https://example.com/navkit"
